--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,12 @@
-$red: pink;
+// the order of imports makes a difference. Mixins first. 
 
-body {
-    background: $red;
-}
+@use 'scss/components/about';
+@use 'scss/components/navbar';
+@use 'scss/components/about';
+@use 'scss/components/block-text-left';
+@use 'scss/components/block-text-right';
+@use 'scss/components/block-image-left';
+@use 'scss/components/block-image-right';
+@use 'scss/components/footer';
+
+
