--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -2,64 +2,31 @@
 
 .navbar {
     overflow: hidden;
-    position: absolute;
-    width: 1680px;
     height: 125px;
-    background: #FFFFFF;
+    background: $white;
     opacity: 0.7;
 
     &__button-menu {
       @include font-bold;
-      position: absolute;
       width: 260px;
       height: 49px;
-      left: 60px;
-      top: 41px;
       border: none;
-      text-align: center;
       background: #FFFFFF;
     }
 
     &__logo {
       position: absolute;
-      display: inline-block;
-      vertical-align: text-top;
       width: 162px;
-      height: 104px;
-      left: 759px;
-      top: 14px;
+      left: 50%;
+      margin-left: -50px !important; 
+      display: block;  
     }
 
     &__button-book {
       @include font-bold;
-      position: absolute;
       width: 260px;
       height: 65px;
-      left: 1356px;
-      top: 33px;
       border: 3px solid $black ;
-      text-align: center;
       background: #FFFFFF;
     }
   }
-
-  // class="d-inline-block align-text-top"
-
-  // .navbar a {
-  //   float: left;
-  //   color: #f2f2f2;
-  //   text-align: center;
-  //   padding: 14px 16px;
-  //   text-decoration: none;
-  //   font-size: 17px;
-  // }
-
-  // .navbar a:hover {
-  //   background-color: #df7a37b0;
-  //   color: black;
-  // }
-  
-  // .navbar a.active {
-  //   background-color: #df7a37b0;
-  //   color: white;
-  // }
