--- a/src/scss/components/_block-text-left.scss
+++ b/src/scss/components/_block-text-left.scss
@@ -3,14 +3,21 @@
 .block {
     background: $white;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &__text {
         margin: 0;
-        position: absolute;               
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%); 
+        min-height: 500px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        @media screen and (min-width: 992px) {
+            min-height: none;
+        }
     }
 
     &__heading {
