--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -2,25 +2,25 @@
 
 .about {
     background-color: $beige;
-    width: 1680px;
-    height: 408px;
-    position: relative;
-
+    max-width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;    
+    justify-content: center;
 
     &__text {
-    position: absolute;               
     max-width: 50%;
-    padding: 1em;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    padding: 3em;
+
+        @media screen and (max-width: 320px) {
+            max-width: 90%;
+            padding: 1em;
+
+        }
     }
 
     &__heading {
         @include font-bold; 
-        // padding-top: 110px;
-        // padding-bottom: 16px;
     }
 
     &__line {
@@ -30,8 +30,6 @@
 
     &__para {
         @include font-normal;
-        // padding-top: 16px;
-        // margin: 0px 440px 0px 440px;
     }
        
 }   
