--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -4,7 +4,11 @@
     background-color: $black;
     width: 1680px;
     height: 408px;
-    
+    // max-width: 100%;
+    // height: 100%;
+    // display: flex;
+    // align-items: center;    
+    // justify-content: center;
 
     &__heading {
         @include font-bold;
