--- a/src/scss/components/_hero-image.scss
+++ b/src/scss/components/_hero-image.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .hero-image {
-    position: relative;
+    // position: relative;
     max-width: 100%;
     height: auto;
 }
