--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,31 +2,31 @@
 
 .footer {
     background-color: $black;
-    width: 1680px;
-    height: 408px;
-    // max-width: 100%;
-    // height: 100%;
-    // display: flex;
-    // align-items: center;    
-    // justify-content: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;    
+    justify-content: center;
+
+    &__text {
+        padding: 4em;
+
+    }
 
     &__heading {
         @include font-bold;
         color: #f4f2ef;
-        padding-top: 80px;
     }
 
     &__line {
         border-bottom: 1px solid #f4f2ef;
         box-align: center;
         width: 80px;
-        margin-bottom: 40px;
     }
 
     &__hours {
         @include font-normal;
         color: #f4f2ef;
-        margin: 0px;
     }
 
     &__phone {
@@ -41,4 +41,4 @@
             text-decoration: underline; 
         }
        
-    }   
+    } 
