--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -7,7 +7,7 @@
   left: 0;
   z-index: 10;
   width: 100%;
-  // background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   // background: $white;
   // opacity: 0.7;
   padding: 8px 16px;
