--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -11,6 +11,7 @@
     &__text {
     max-width: 50%;
     padding: 3em;
+    margin: 60px 0px;
 
         @media screen and (max-width: 320px) {
             max-width: 90%;
