--- a/src/scss/components/_hero-image.scss
+++ b/src/scss/components/_hero-image.scss
@@ -2,5 +2,9 @@
 
 .hero-image {
     max-width: 100%;
-    height: auto;
+
+    // @media screen and (max-width: 320px) {
+    //     min-height:400px;
+    //     min-width: auto;
+    // }
 }
