--- a/src/scss/components/_block-text-left.scss
+++ b/src/scss/components/_block-text-left.scss
@@ -31,6 +31,12 @@
 
     &__para {
         @include font-normal;
+
+        @media screen and (min-width: 320px) {
+            max-width: 80%;
+            word-wrap: break-word;
+
+        }
     }
 
     &__phone {
