--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -9,8 +9,10 @@
     justify-content: center;
 
     &__text {
-        padding: 4em;
-        
+        padding-top: 4em;
+        padding-left: 4em;
+        padding-right: 4em;
+
         @media screen and (max-width: 320px) {
             padding: 2em;
             margin-top: 30px;
@@ -28,7 +30,6 @@
         width: 80px;
         margin-top: 35px;
         margin-bottom: 40px;
-
     }
 
     &__hours {
@@ -55,17 +56,19 @@
         a:hover, a:active { 
             text-decoration: underline; 
         }
-    
-    &__socials {
-        position: absolute;
-        right: 50px;
-        margin-top: 220px;
 
-        @media screen and (max-width: 320px) {
-            position: auto;
-            margin-top: 0px;
-            right: auto;
-        }
+        &__socials {
+            display: flex;
+            align-items: center;    
+            justify-content: center;
+            padding-top: 130px;
+    
+            @media screen and (min-width: 1024px) {
+                position: relative;
+                left: 650px;
+                bottom: 80px;
+                padding: 0px;
+            }
     }
 
     &__socials-button {
@@ -78,7 +81,7 @@
             border: solid 1px $white;
             border-radius: 50%;
             padding: 12px;
-            margin: 10px;
+            margin: 30px;
     } 
 
 } 
