--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,15 +4,8 @@
 @import 'components/navbar';
 @import 'components/hero-image';
 @import 'components/about';
-@import 'components/block-image-left';
-@import 'components/block-image-right';
-@import 'components/block-text-left';
-@import 'components/block-text-right';
+@import 'components/block-image';
+@import 'components/block-text';
+@import 'components/menu-page-navbar';
+@import 'components/menu-page-body';
 @import 'components/footer';
-
-
-
-
-
-
-
