--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,11 +1,11 @@
-@use '../abstracts' as *;
+@use '../abstracts'as *;
 
 .footer {
     background-color: $black;
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;    
+    align-items: center;
     justify-content: center;
 
     &__text {
@@ -22,6 +22,7 @@
     &__heading {
         @include font-bold;
         color: #f4f2ef;
+        padding-top: 20px;
     }
 
     &__line {
@@ -49,39 +50,43 @@
             font-size: 18px;
         }
     }
-        a:link, a:visited {
-            text-decoration: none;
-            color: #f4f2ef;
-        } 
-        a:hover, a:active { 
-            text-decoration: underline; 
-        }
 
-        &__socials {
-            display: flex;
-            align-items: center;    
-            justify-content: center;
-            padding-top: 130px;
-    
-            @media screen and (min-width: 1024px) {
-                position: relative;
-                left: 650px;
-                bottom: 80px;
-                padding: 0px;
-            }
+    a:link,
+    a:visited {
+        text-decoration: none;
+        color: #f4f2ef;
+    }
+
+    a:hover,
+    a:active {
+        text-decoration: none;
+    }
+
+    &__socials {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 40px;
+
+        @media only screen and (min-width: 768px) {
+            position: relative;
+            left: 650px;
+            bottom: 65px;
+            padding: 0px;
+        }
     }
 
     &__socials-button {
-            width: 60px;
-            height: 60px;
-            text-align: center;
-            text-decoration: none;
-            line-height: 60px;
-            vertical-align: middle;
-            border: solid 1px $white;
-            border-radius: 50%;
-            padding: 12px;
-            margin: 30px;
-    } 
+        width: 60px;
+        height: 60px;
+        text-align: center;
+        text-decoration: none;
+        line-height: 60px;
+        vertical-align: middle;
+        border: solid 1px $white;
+        border-radius: 50%;
+        padding: 12px;
+        margin: 20px;
+    }
 
-} 
+}
