--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,62 +1,80 @@
-@use '../abstracts' as *;
+@use '../abstracts'as *;
 
 .navbar {
   position: fixed;
   top: 0;
+  width: 100%;
   height: 125px;
   left: 0;
   z-index: 10;
-  width: 100%;
   background: $white;
   opacity: 0.7;
   padding: 8px 16px;
-  display: flex;
   align-items: center;
+
+  ul {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+
+    @media only screen and (max-width: 768px) {
+      align-items: flex-start;
+    }
+  }
+
+  li {
+    display: block;
+  }
 
   &__logo {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    @media only screen and (max-width: 450px) {
+      left: 68%;
+    }
   }
 
-  &__nav {
-    width: 100%;
-  
-    ul {
-      display: flex;
-      width: 100%;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-    }
-  
-    li {
-      display: inline-block;
-    }
-  }
 
   &__button-menu {
-      @include font-bold;
-      width: 260px;
-      height: 49px;
-      border: none;
-      background: #FFFFFF;
-   }
+    @include font-bold;
+    font-size: 10px;
+    background: #FFFFFF;
+    border: 2px solid $black;
 
-  &__button-book {
+    @media only screen and (min-width: 768px) {
       @include font-bold;
       width: 260px;
       height: 65px;
-      border: 3px solid $black ;
-      background: #FFFFFF;
-      position: relative;
-      
-   }
+      border: none;
+    }
+  }
+
+  &__button-book {
+    @include font-bold;
+    font-size: 10px;
+    background: #FFFFFF;
+    left: 0;
+    border: 2px solid $black;
+
+    @media only screen and (min-width: 768px) {
+      @include font-bold;
+      width: 260px;
+      height: 65px;
+      border: 3px solid $black;
+    }
+  }
 }
 
 .navbar-toggler {
   @media only screen and (min-width: 768px) {
     display: none;
   }
+}
+
+.nav-link {
+  padding: 1px;
 }
