navbar change to flexbox

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -23,6 +23,7 @@
         @include font-bold;
         color: #f4f2ef;
         padding-top: 20px;
+        text-transform: uppercase;
     }
 
     &__line {
