--- a/src/scss/components/_menu-page-body.scss
+++ b/src/scss/components/_menu-page-body.scss
@@ -36,5 +36,6 @@
         border: 3px solid $black;
         background: #FFFFFF;
         position: relative;
+        text-transform: uppercase;
     }
 }
