--- a/src/scss/components/_body.scss
+++ b/src/scss/components/_body.scss
@@ -1,7 +1,13 @@
 @use '../abstracts' as *;
 
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body, html {
     margin: 0px;
     padding: 0px;
-    height: 100%;
+    height: 100%;  
+    max-width:100%;
+    box-sizing: border-box;
 }
