hover states and menu navbar updated

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -61,6 +61,8 @@
     a:hover,
     a:active {
         text-decoration: none;
+        background: $white;
+  color: $black;
     }
 
     &__socials {
