--- a/src/scss/components/_menu-page-body.scss
+++ b/src/scss/components/_menu-page-body.scss
@@ -38,4 +38,9 @@
         position: relative;
         text-transform: uppercase;
     }
+
+    &__button:hover {
+        background: $black;
+        color: $white;
+      }
 }
