--- a/src/scss/components/_menu-page-navbar.scss
+++ b/src/scss/components/_menu-page-navbar.scss
@@ -1,6 +1,10 @@
 @use '../abstracts'as *;
 
 #menuNavbar {
-    position: relative;
-    opacity: 1;
+  position: fixed;
+  background: rgba(255, 255, 255, 1);
+}
+
+#menuFirstSection {
+  margin-top: 100px;
 }
