--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -7,7 +7,7 @@
   height: 125px;
   left: 0;
   z-index: 10;
-  background: rgba(255,255,255,0.7);
+  background: rgba(255, 255, 255, 0.7);
   padding: 8px 16px;
 
   &__list {
@@ -24,17 +24,17 @@
 
   &__button-menu {
     @include font-bold;
-      width: 260px;
-      height: 65px;
-      background: transparent;
-      text-transform: uppercase;
-      border: none;
-      margin-left: 40px;
+    width: 260px;
+    height: 65px;
+    background: transparent;
+    text-transform: uppercase;
+    border: none;
+    margin-left: 40px;
 
 
-      @media only screen and (max-width: 768px) {
-        display: none;
-        }
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
   }
 
   &__button-book {
@@ -45,9 +45,9 @@
     border: 3px solid $black;
     text-transform: uppercase;
     margin-right: 40px;
-      
+
     @media only screen and (max-width: 768px) {
-    display: none;
+      display: none;
     }
   }
 
@@ -56,7 +56,7 @@
     color: $white;
   }
 
-            
+
   &__button-menu:hover {
     background: $black;
     color: $white;
@@ -65,18 +65,21 @@
 
 /* The Overlay (background) */
 .overlay {
-  /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */
   height: 100%;
   width: 0;
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
   left: 0;
   top: 0;
-  background-color: rgb(0,0,0,1); /* Black fallback color */
-  // background-color: rgba(0,0,0,1); /* Black w/opacity */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
-  
+  background-color: rgb(0, 0, 0, 1);
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  transition: 0.5s;
+  /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+
   &__button-book {
     @include font-bold;
     color: $white;
@@ -105,8 +108,8 @@
     padding-top: 120px;
     text-decoration: none;
     color: $white;
+  }
 
-}
   &__socials-button {
     width: 60px;
     height: 60px;
@@ -118,83 +121,76 @@
     border-radius: 50%;
     padding: 12px;
     margin: 20px;
-}
-&__button-menu:hover {
-  background: $white;
-  color: $black;
-}
-&__button-book:hover {
-  background: $white;
-  color: $black;
-}
-&__socials-button:hover {
-  background: $white;
-  color: $black;
-}
-}
-
-  /* Position the content inside the overlay */
-  .overlay-content {
-    position: relative;
-    top: 25%; /* 25% from the top */
-    width: 100%; /* 100% width */
-    text-align: center; /* Centered text/links */
-    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
-  }
-  
-  /* The navigation links inside the overlay */
-  // .overlay a {
-  //   padding: 8px;
-  //   text-decoration: none;
-  //   font-size: 36px;
-  //   color: #818181;
-  //   display: block; /* Display block instead of inline */
-  //   transition: 0.3s; /* Transition effects on hover (color) */
-  // }
-  
-  /* When you mouse over the navigation links, change their color */
-  // .overlay a:hover, .overlay a:focus {
-  //   color: #f1f1f1;
-  // }
-  
-  /* Position the close button (top right corner) */
-  .overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-  }
-  
-  // /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
-  // @media screen and (max-height: 450px) {
-  //   .overlay a {font-size: 20px}
-  //   .overlay .closebtn {
-  //     font-size: 40px;
-  //     top: 15px;
-  //     right: 35px;
-  //   }
-  // }
-  
-  
-  .burgerburger {
-    font-size:30px;
-    cursor: pointer;
-    color: black;
-    z-index: 999999999;
-    position: relative;
-  
-    @media only screen and (min-width: 768px) {
-      display: none;
-    }
-  }
-  
-  a:link,
-  a:visited {
-      text-decoration: none;
-      color: #f4f2ef;
   }
 
-  // a:hover,
-  // a:active {
-  //     text-decoration: none;
-  // }
+  &__button-menu:hover {
+    background: $white;
+    color: $black;
+  }
+
+  &__button-book:hover {
+    background: $white;
+    color: $black;
+  }
+
+  &__socials-button:hover {
+    background: $white;
+    color: $black;
+  }
+}
+
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+  top: 25%;
+  /* 25% from the top */
+  width: 100%;
+  /* 100% width */
+  text-align: center;
+  /* Centered text/links */
+  margin-top: 30px;
+  /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+/* When you mouse over the navigation links, change their color */
+// .overlay a:hover, .overlay a:focus {
+//   color: #f1f1f1;
+// }
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+// /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+// @media screen and (max-height: 450px) {
+//   .overlay a {font-size: 20px}
+//   .overlay .closebtn {
+//     font-size: 40px;
+//     top: 15px;
+//     right: 35px;
+//   }
+// }
+
+
+.burgerburger {
+  font-size: 30px;
+  cursor: pointer;
+  color: $black;
+  z-index: 999999999;
+  position: relative;
+
+  @media only screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+  color: #f4f2ef;
+}
+
