--- a/src/scss/components/_body.scss
+++ b/src/scss/components/_body.scss
@@ -1,13 +1,16 @@
-@use '../abstracts' as *;
+@use '../abstracts'as *;
 
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-body, html {
-    margin: 0px;
-    padding: 0px;
-    height: 100%;  
-    max-width:100%;
-    box-sizing: border-box;
+body,
+html {
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
 }
