--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -51,34 +51,25 @@
     }
   }
 
-  &__button-book:hover {
-    background: $black;
-    color: $white;
-  }
-
-
-  &__button-menu:hover {
+  &__button-book:hover,  &__button-menu:hover {
     background: $black;
     color: $white;
   }
 }
 
-/* The Overlay (background) */
 .overlay {
-  /* Height & width depends on how you want to reveal the overlay (see JS below) */
   height: 100%;
   width: 0;
   position: fixed;
-  /* Stay in place */
-  z-index: 1;
   /* Sit on top */
+  z-index: 1;
   left: 0;
   top: 0;
   background-color: rgb(0, 0, 0, 1);
-  overflow-x: hidden;
   /* Disable horizontal scroll */
-  transition: 0.5s;
+  overflow-x: hidden;
   /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+  transition: 0.5s;
 
   &__button-book {
     @include font-bold;
@@ -123,17 +114,7 @@
     margin: 20px;
   }
 
-  &__button-menu:hover {
-    background: $white;
-    color: $black;
-  }
-
-  &__button-book:hover {
-    background: $white;
-    color: $black;
-  }
-
-  &__socials-button:hover {
+  &__button-menu:hover, &__button-book:hover, &__socials-button:hover {
     background: $white;
     color: $black;
   }
@@ -143,19 +124,11 @@
 .overlay-content {
   position: relative;
   top: 25%;
-  /* 25% from the top */
   width: 100%;
-  /* 100% width */
   text-align: center;
-  /* Centered text/links */
-  margin-top: 30px;
   /* 30px top margin to avoid conflict with the close button on smaller screens */
+  margin-top: 30px;
 }
-
-/* When you mouse over the navigation links, change their color */
-// .overlay a:hover, .overlay a:focus {
-//   color: #f1f1f1;
-// }
 
 /* Position the close button (top right corner) */
 .overlay .closebtn {
